--- a/style.css
+++ b/style.css
@@ -1,8 +1,46 @@
 html {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  background-image: url(https://t4.ftcdn.net/jpg/02/66/38/15/360_F_266381525_alVrbw15u5EjhIpoqqa1eI5ghSf7hpz7.jpg);
+}
+
+#title {
+  color: white;
+  padding: 10px;
+}
+
+#content {
+  display: flex;
+}
+
+@media only screen and (max-width: 650px) {
+  #content {
+    flex-direction: column;
   }
-  
-  h1 {
-    color: fuchsia;
+}
+
+
+@media only screen and (min-width: 650px) {
+  #content {
+    flex-direction: row;
   }
+}
+
+#weather-summary{
+  display: flex;
+  flex-direction: column;
+  background-color: cyan;
+  padding: 10px;
+  margin: 10px;
+}
+
+#outfit{
+  display: flex;
+  flex-direction: column;
+  background-color: cyan;
+  padding: 10px;
+  margin: 10px;
+}
