--- a/style.css
+++ b/style.css
@@ -43,3 +43,15 @@ body {
   padding: 10px;
   margin: 10px;
 }
+
+.clothes {
+  padding: 10px;
+  margin: 10px;
+}
+
+img {
+  max-height: 400px;
+  max-width: 400px;
+  padding: 10px;
+  margin: 10px;
+}
